<resources>

    <!--Logo Descriptor-->
    <string name="medpal_logo">MedPal Logo</string>

    <!--Application Name-->
    <string name="Application_Name">MedPal</string>

    <!-- Welcome Page -->
    <string name="applicationName">MedPal</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <!--  Medical Record Page  -->
    <string name="medicalRecord">My Medical Record</string>
    <string name="personName">Lisa Williams</string>
    <string name="dateOfBirth">27 / 08 / 1999</string>
    <string name="address">Address :</string>
    <string name="dob">DOB :</string>
    <string name="personAddress">71 Farmers Hall</string>
    <string name="personPostCode">AB25 1XF</string>
    <string name="personCity">Aberdeen</string>
    <string name="personPhone">+44 1234 5678 999</string>
    <string name="phone">Phone :</string>
    <string name="diseases">Diseases :</string>
    <string name="allergies">Allergies :</string>
    <string name="update">Update your record</string>
    <string name="btnUpdateMedRec">Update Details</string>

    <!--Login Page -->
    <string name="sign_in_button">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Annabelle</string>
    <string name="password_hint">Password#</string>

    <!--Register Page-->
    <string name="users_name">Name</string>
    <string name="autoFillHintName">Annabelle</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="phone_hint_example">077733322110</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Important Contacts Page   -->
    <string name="register_button">Register</string>
    <string name="importantContacts">Important Contacts</string>
    <string name="generalPractitioner">General Practitioner :</string>
    <string name="gpName">Dr. Dolittle</string>
    <string name="gpPhone">+44 1234 5678 900</string>
    <string name="gpCall">Call GP</string>
    <string name="gpMailLabel">drDolittle@gp.uk</string>
    <string name="gpMail">Email :</string>
    <string name="gpAddress">15 Hospital Street   AB45 6FT Aberdeen</string>
    <string name="gpGPS">Get directions</string>
    <string name="gpEdit">Edit details</string>
    <string name="ecProfilePicture">Profile Picture</string>
    <string name="emergencyContact">Emergency Contact :</string>
    <string name="ecName">Kate Williams</string>
    <string name="ecRelation">Mother</string>
    <string name="ecPhone">+44 9876 5432 100</string>
    <string name="ecAddress">71 Farmers Hall   AB25 1XF Aberdeen</string>
    <string name="ecGPS">Get directions</string>
    <string name="gpEdit2">Edit details</string>

    <!--Home Page   -->
    <string name="tvHi">Hi, David</string>
    <string name="btnMyPrescriptions">My Prescriptions</string>
    <string name="btnMedicalRecord">Medical Record</string>
    <string name="btnImportantContacts">Important Contacts</string>
    <string name="btnMedicalCentres">Medical Centres</string>
    <string name="btnSettings">Settings</string>
    <string name="btnHelp">HELP!</string>

    <!--Medicine Names -->
    <string name="tvMyPrescriptions">My Prescriptions:</string>
    <string name="tvMedicine1">Medicine 1</string>
    <string name="tvMedicine2">Medicine 2</string>
    <string name="tvMedicine3">Medicine 3</string>
    <string name="tvMedicine4">Medicine 4</string>
    <string name="tvMedicine5">Medicine 5</string>
    <string name="tvMedicine6">Medicine 6</string>
    <string name="tvMedicine7">Medicine 7</string>
    <string name="tvMedicine8">Medicine 8</string>
    <string name="tvMedicine9">Medicine 9</string>
    <string name="tvMedicine10">Medicine 10</string>

    <!-- New Reminder -->
    <string name="btnCreateReminder">Save Reminder</string>
    <string name="alarmText"></string>
    <string name="alarmTimePicker"></string>

    <!--Medicine Details   -->
    <string name="tvMedicineName">Medicine Name</string>
    <string name="tvPrescriptionDetails">Prescription Details</string>
    <string name="tvDoseLabel">Dose</string>
    <string name="tvDose">10mg</string>
    <string name="tvSideEffectsLabel">Side Effects</string>
    <string name="tvSideEffects">Nausea</string>
    <string name="tvPrescribedByLabel">Prescribed By</string>
    <string name="tvPrescribedBy">Dr DoLittle</string>
    <string name="tvEtcLabel">Extra Info</string>
    <string name="tvEtc">Ets., Etc.</string>
    <string name="btnOrderMore">Order More</string>
    <string name="btnCancel">Cancel Prescription</string>
    <string name="tvReminders">Reminders</string>
    <string name="tvEightAM">8:00 AM</string>
    <string name="tvOnePM">1:00 PM</string>
    <string name="tvSixPM">6:00 PM</string>
    <string name="btnAddReminder">Add Reminder</string>

    <!--Medical Centre page    -->
    <string name="mapImage">Medical centre map</string>
    <string name="medical_centre_logo">Medical centre logo</string>
    <string name="medical_centre_name">Medical centre name</string>
    <string name="medical_practices_nearby">Medical Practices and Hospitals near you</string>
    <string name="medical_practices">Medical Practices</string>
    <string name="hospitals">Hospitals</string>

    <!--Settings page-->
    <string name="settings_logo">Settings Logo</string>
    <string name="settingsTitle">Settings</string>
    <string name="languagesText">Languages :</string>
    <string name="textSizeText">Text size :</string>
    <string name="colourThemeText">Colour :</string>
    <string name="userAvatar">Avatar :</string>
    <string name="changeAvatar">Change Avatar</string>
    <string name="cameraIcon">Camera Icon</string>
    <string name="userEmail">Email :</string>
    <string name="allowUpdatesText">Allow automatic updates :</string>
    <string name="appVersionText">App version : 1.0.0</string>
    <string name="signOutButton">Sign out</string>
    <string name="title_activity_nearby_medical_practices">Map</string>
    <string name="place_name">Place Name</string>
    <string name="search">Search</string>
    <string name="medical_practice">Medical Practice</string>
    <string name="hospital">Hospital</string>
    <string name="emergency_room">Emergency Room</string>


    //Settings Page
    <string name="app_name">medpal_settings</string>
    <string name="medpal">MedPal</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="text_size">Text Size</string>
    <string name="colour_theme">Colour Theme</string>
    <string name="change_avatar">CHANGE AVATAR</string>
    <string name="user_email">User Email</string>
    <string name="allow_automatic_updates">Allow Automatic Updates</string>
    <string name="app_version">App Version</string>
    <string name="sign_out">SIGN OUT</string>
    ​
    //Settings Page - Spanish
    <string name="app_name_spanish">medpal_settings</string>
    <string name="allow_automatic_updates_spanish">Permitir actualizaciones automáticas</string>
    <string name="app_version_spanish">Version de aplicacion</string>
    <string name="change_avatar_spanish">CAMBIAR AVATAR</string>
    <string name="colour_theme_spanish">Tema de color</string>
    <string name="languages_spanish">Idiomas</string>
    <string name="medpal_spanish">Medpal</string>
    <string name="settings_spanish">Configuraciones</string>
    <string name="sign_out_spanish">DESCONECTAR</string>
    <string name="text_size_spanish">Tamano del texto</string>
    <string name="user_email_spanish">Email del usuario</string>
    ​
    //Settings Page - French
    <string name="allow_automatic_updates_french">Autoriser les mises à jour automatiques</string>
    <string name="app_name_french">medpal_settings</string>
    <string name="app_version_french">Version de l\'application</string>
    <string name="change_avatar_french">CHANGER D\'AVATAR</string>
    <string name="colour_theme_french">Thème de couleur</string>
    <string name="languages_french">Langues</string>
    <string name="medpal_french">Medpal</string>
    <string name="settings_french">Paramètres</string>
    <string name="sign_out_french">DÉCONNEXION</string>
    <string name="text_size_french">Taille du texte</string>
    <string name="user_email_french">" Email de l'utilisateur"</string>
    ​
    //Settings Page - Polish
    <string name="app_name_polish">medpal_settings</string>
    <string name="allow_automatic_updates_polish">Zezwalaj na automatyczne aktualizacje</string>
    <string name="app_version_polish">Wersja aplikacji</string>
    <string name="change_avatar_polish">Zmień awatar</string>
    <string name="colour_theme_polish">Motyw kolorystyczny</string>
    <string name="medpal_polish">Medpal</string>
    <string name="languages_polish">Języki</string>
    <string name="settings_polish">Ustawienia</string>
    <string name="sign_out_polish">WYLOGUJ SIĘ</string>
    <string name="text_size_polish">Rozmiar czcionki</string>
    <string name="user_email_polish">E-mail użytkownika</string>
    ​
    //Settings Page - Chinese
    <string name="app_name_chinese">medpal_settings</string>
    <string name="allow_automatic_updates_chinese">允许自动更新</string>
    <string name="app_version_chinese">应用程式版本</string>
    <string name="change_avatar_chinese">更改头像</string>
    <string name="colour_theme_chinese">颜色主题</string>
    <string name="languages_chinese">语言</string>
    <string name="medpal_chinese">Medpal</string>
    <string name="settings_chinese">设定值</string>
    <string name="sign_out_chinese">登出</string>
    <string name="text_size_chinese">字体大小</string>
    <string name="user_email_chinese">用户电子邮件</string>

    //Array for languages spinner
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Polish</item>
        <item>Chinese</item>
    </string-array>
    ​
    //Array for font size spinner
    <string-array name="text_size">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

</resources>

