<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/username"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"/>

</LinearLayout>