<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MedicalRecord">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvMedicineName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvMedicineName"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvPrescriptionDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tvPrescriptionDetails"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/tvDoseLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvDoseLabel"
                    android:textSize="25sp"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tvDose"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvDose"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvSideEffectsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvSideEffectsLabel"
                    android:textSize="25sp"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tvSideEffects"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvSideEffects"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvPrescribedByLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvPrescribedByLabel"
                    android:textSize="25sp"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tvPrescribedBy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvPrescribedBy"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvEtcLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvEtcLabel"
                    android:textSize="25sp"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tvEtc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvEtc"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOrderMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btnOrderMore"
                    android:textAlignment="center"
                    android:textColor="@color/Text_colour"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btnCancel"
                    android:textAlignment="center"
                    android:textColor="@color/Text_colour"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvReminders"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tvReminders"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/medicineRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btnAddReminder"
                    android:textAlignment="center"
                    android:textColor="@color/Text_colour"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>