<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="265dp"
                android:layout_height="254dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="172dp"
                android:layout_marginEnd="86dp"
                android:layout_marginBottom="315dp"
                android:contentDescription="@string/medpal_logo"
                android:paddingTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/logo1_foreground" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="231dp"
                android:layout_marginTop="463dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="218dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/Button_colour"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="463dp"
                android:layout_marginEnd="234dp"
                android:layout_marginBottom="218dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/Button_colour"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>